# independent-analysis

./: .gitignore  README.md  my_GMM_std.m  my_RealTimeIVA.m  my_RealTimeIVA_GMM.m  rir_generator.cpp
IVA_C6713/: .ccsproject  .cproject  .project  C6713.cmd  DEC6713.gel  csl6713.lib  rts6700.lib
IVA_C6713/include/: DEC6713.h  fft.h  iva.h  led.h  sys.h  sysTask.h  timer.h
IVA_C6713/src/: DEC6713.C  fft.c  iva.c  led.c  main.c  matrix.c  sys.c  sysTask.c  timer.c  vecs.asm
MP3Encoder/: .ccsproject  .cproject  .project  Debug.lkf  MP3Encoder.cdb  MP3Encoder.cmd  MP3Encoder.paf  MP3Encoder.pjt  MP3Encoder.tcf  MP3Encoder.wks  Readme.txt  Release.lkf  readme.md
MP3Encoder/Release/: MP3Encoder.cdb  MP3Encoder_linkInfo.xml  MP3Encodercfg.cmd  MP3Encodercfg.h  MP3Encodercfg.h62  MP3Encodercfg.s62  MP3Encodercfg_c.c  MP3Encodercfg_c.pp  ap  ccsObjs.opt  makefile  sources.mk  subdir_rules.mk  subdir_vars.mk
MP3Encoder/Release/lib/: subdir_vars.mk
MP3Encoder/Release/src/: MP3Encoder.pp  fft.pp  flash.pp  iva.pp  led.pp  matrix.pp  my_sys.pp  subdir_rules.mk  subdir_vars.mk
MP3Encoder/gel/: DEC6713.gel
MP3Encoder/include/: aic23.h  c6x1x_edma_mcasp.h  dec6713.h  dec6713_edma_aic23.h  fft.h  flash.h  iom.h  iva.h  log.h  matrix.h  mem.h  my_sys.h  sio.h  std.h  sys.h
MP3Encoder/lib/: DEC6713BSL.lib  c6x1x_edma_mcasp.l67  dec6713_edma_aic23_l67.l67
MP3Encoder/src/: MP3Encoder.c  boot_c671x.s62  c6713_emif.s62  c6x1x_edma_mcasp.c  fft.c  flash.c  iva.c  matrix.c  my_sys.c
MP3Encoder/targetConfigs/: TMS320C6713.ccxml
iva_MATLAB/: README.md  my_GMM_std.m  my_ICA.m  my_RealTimeIVA_GMM.m  my_kurt.m  my_whiten.m
iva_c/: CMakeLists.txt  Makefile  fft.c  fft.h  iva.c  iva.h  main.c  matrix.c  matrix.h  readme.md
iva_cpp/: CMakeLists.txt  iva.cpp  iva.h  iva_parameter.h  main.cpp  readme.md
iva_cpp/config/: data.prototxt  iva.prototxt
iva_cpp/demo/: CMakeLists.txt  main.cpp  readme.md
iva_cpp/demo/config/: iva.prototxt
iva_cpp/proto/: iva.pb.cc  iva.pb.h  iva.proto
iva_cpp/src/: iva.cpp  iva.h  main.cpp
iva_matlab/: README.md  my_IVA.m  my_RealTimeIVA.m
iva_mex/: fft.c  iva.c  iva.h  matrix.c  matrix.h  my_RealTimeIVA_mex.m  real_time_iva.c  sperated_LMS.m
